CSS styling. making the output lists align correctly for easy comparison

--- a/css/master.css
+++ b/css/master.css
@@ -32,3 +32,11 @@ span {
 #rangeInput {
   width: 87%;
 }
+
+.hideaway {
+  display: none;
+}
+
+#arrayOutput {
+  text-align: center;
+}
